# futurekind-backend

./: .cursorignore  .env.example  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: base.py  economic.py  environmental.py  policy.py
app/api/routes/: sessions.py  topics.py
app/db/: supabase_client.py
app/graph/: nodes.py  router.py  state.py  workflow.py
app/ingestion/: chunker.py  loader.py  pipeline.py  summarizer.py
app/models/: schemas.py
app/retrieval/: retriever.py
app/scenarios/: topics.py
app/services/: deliberation.py  session.py
scripts/: ingest.py
supabase/migrations/: 001_initial_schema.sql
