[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stakeai-backend"
version = "0.1.0"
description = "StakeAI backend - AI-facilitated PLF policy deliberation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "supabase>=2.10.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "langgraph>=0.2.0",
    "pypdf>=5.0.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
